fix: hope that helps with the left-alignment on safari

--- a/pages/place.module.css
+++ b/pages/place.module.css
@@ -60,6 +60,7 @@
     padding-bottom: 10px;
     padding-top: 7px;
     justify-self: center;
+    justify-items: center;
     max-width: fit-content;
     width: 99dvw;
 }
@@ -338,6 +339,7 @@
     position: relative;
     pointer-events: all;
     justify-items: center;
+    align-items: center;
 }
 .overlayPosition{
     position: relative;
